--- a/Support/Plugins/Invert/Makefile_MinGW
+++ b/Support/Plugins/Invert/Makefile_MinGW
@@ -1,6 +1,7 @@
 PLUGINOBJECTS = invert.o
 PLUGINNAME = invert
-PATHTOROOT = ../../
+#hack to avoid backslash at end of line
+PATHTOROOT = $(subst /,\,../../)
 
-include ../Makefile_MinGW.master
+include ..\Makefile_MinGW.master
 
